hard-gists/3166d6123bd26c066c462328bebcf0c0/run.log
=== Docker Run Log for 3166d6123bd26c066c462328bebcf0c0 ===
Started at: Mi 29. Okt 13:43:02 CET 2025

[2025-10-29 13:43:03] START: Running container for 3166d6123bd26c066c462328bebcf0c0
[2025-10-29 13:43:03] SUCCESS: Container 32cd6b5f884b4c6905b026b0263ffc6da6cc39623827ab49fe5910634e805ab5 started for 3166d6123bd26c066c462328bebcf0c0
=== Container logs for 3166d6123bd26c066c462328bebcf0c0 ===
  File "/snippet.py", line 33
    print 'Correo enviado satisfactoriamente!'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3166d6123bd26c066c462328bebcf0c0 ===
[2025-10-29 13:43:05] INFO: Container 32cd6b5f884b4c6905b026b0263ffc6da6cc39623827ab49fe5910634e805ab5 has stopped
